--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -22,7 +22,8 @@
 
 [[constraint]]
   name = "github.com/cloudtrust/common-service"
-  version = "v1.0-rc7"
+  branch = "issuer"
+#  version = "v1.0-rc7"
 
 [[constraint]]
   name = "github.com/pkg/errors"
