--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -22,8 +22,7 @@
 
 [[constraint]]
   name = "github.com/cloudtrust/common-service"
-  branch = "master"
-  #version = "v1.2.1"
+  version = "v1.2.3"
 
 [[constraint]]
   name = "github.com/pkg/errors"
