--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -22,7 +22,8 @@
 
 [[constraint]]
   name = "github.com/cloudtrust/common-service"
-  version = "v1.2.4"
+  #version = "v1.2.4"
+  branch = "CLOUDTRUST-2109_2_authorizationManagement"
 
 [[constraint]]
   name = "github.com/pkg/errors"
