--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -22,8 +22,7 @@
 
 [[constraint]]
   name = "github.com/cloudtrust/common-service"
-#  version = "v2.1.1"
-  branch = "CT-2237-encrypt-PII"
+  branch = "master"
 
 [[constraint]]
   name = "github.com/pkg/errors"
