--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 
 # Test binary, build with `go test -c`
 *.test
+mock/
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
@@ -19,3 +20,4 @@ vendor/*
 bin/*
 **/debug
 **/.coverprofile
+mock/
