--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -22,7 +22,7 @@
 
 [[constraint]]
   name = "github.com/cloudtrust/common-service"
-  version = "v2.2.0"
+  branch = "refactoring-signature-service-ALV"
 
 [[constraint]]
   name = "github.com/pkg/errors"
