--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -22,7 +22,7 @@
 
 [[constraint]]
   name = "github.com/cloudtrust/common-service"
-  version = "v2.2.0"
+  version = "2.2.1"
 
 [[constraint]]
   name = "github.com/pkg/errors"
