--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -22,7 +22,8 @@
 
 [[constraint]]
   name = "github.com/cloudtrust/common-service"
-  version = "2.2.1"
+#  version = "2.2.1"
+  branch = "ct-2691"
 
 [[constraint]]
   name = "github.com/pkg/errors"
