--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -22,7 +22,8 @@
 
 [[constraint]]
   name = "github.com/cloudtrust/common-service"
-  version = "2.2.2"
+  #version = "2.2.2"
+  branch = "ct-2293"
 
 [[constraint]]
   name = "github.com/pkg/errors"
