--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -22,7 +22,8 @@
 
 [[constraint]]
   name = "github.com/cloudtrust/common-service"
-  version = "2.2.4"
+#  version = "2.2.5"
+  branch = "new-flow"
 
 [[constraint]]
   name = "github.com/pkg/errors"
