Uses latest common-service

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -22,8 +22,7 @@
 
 [[constraint]]
   name = "github.com/cloudtrust/common-service"
-#  version = "2.2.5"
-  branch = "new-flow"
+  version = "2.3.0"
 
 [[constraint]]
   name = "github.com/pkg/errors"
