--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -22,7 +22,8 @@
 
 [[constraint]]
   name = "github.com/cloudtrust/common-service"
-  version = "2.3.5"
+#  version = "2.3.5"
+  branch = "EDULOG-228-Offline-token"
 
 [[constraint]]
   name = "github.com/pkg/errors"
