--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -23,7 +23,7 @@
 [[constraint]]
   name = "github.com/cloudtrust/common-service"
 #  version = "2.3.5"
-  branch = "EDULOG-228-Offline-token"
+  branch = "Jwt-library-V3"
 
 [[constraint]]
   name = "github.com/pkg/errors"
