--- a/renovate.json
+++ b/renovate.json
@@ -1,3 +1,9 @@
 {
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json"
+    "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+    "packageRules": [
+      {
+        "matchDatasources": ["docker"],
+        "versioning": "redhat"
+      }
+    ]
 }
